# InventoryManagement

./: CMakeLists.txt
notes/: layout.md
src/: main.cpp
src/Database/: Database.cpp  Database.h
src/Models/: Item.h
src/Services/: InventoryService.cpp  InventoryService.h
src/UI/: ConsoleUI.cpp  ConsoleUI.h
